<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="32dp"
            android:textAlignment="center">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/icon_unam"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/white" />

        </LinearLayout>

        <ImageView
            android:id="@+id/loginSpacer"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/login_spacer" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <EditText
                android:id="@+id/etBoleta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/login_hint_boleta"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="24dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/etBoleta"
                tools:layout_editor_absoluteX="24dp" />

            <ImageView
                android:id="@+id/ivCaptcha"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <EditText
                android:id="@+id/etCaptcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/roboto_bold"
                android:hint="@string/login_hint_captcha"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/ivCaptcha"
                tools:layout_editor_absoluteX="24dp" />

            <CheckBox
                android:id="@+id/cbRememberMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/remember_me"
                app:layout_constraintTop_toBottomOf="@+id/etCaptcha"
                tools:layout_editor_absoluteX="24dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/login_btn_bg"
                android:text="@string/login_button"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/cbRememberMe"
                tools:layout_editor_absoluteX="24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</RelativeLayout>